# membrane-visual-qc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  Report.md  environment.yml  load_mvqc.py  pyproject.toml
data/: README.md
demo/: README.md  demo_scene.pml  prepare_rotated_1ubq.py  quickstart.pml  rotated_1ubq_orientation.json  rotated_1ubq_transform.py
docs/: development_state.md  known_limitations.md  manual_gui_validation.md  pdbtm_offline_import.md  pdbtm_semantics_preflight.md  pdbtm_semantics_preflight_results.json  report_schema.md  research_log.md  stage4_fixture_plan.md  stage4_research.md  stage4_scope.md  stage4_source_matrix.md  stage4_threat_model.md  stage4a2_graphical_acceptance.md  stage4a2_pymol_snapshot_semantics.md  stage4b1_implementation.md  stage4b2_implementation.md  stage4b3_gui_orchestration.md  stage4b4_exact_acceptance.md  stage4b_network_cache_design.md  stage4b_preflight.md  stage4c_source_comparison.md  tutorial.md  v0.4.0_graphical_smoke.md  v0.4.0_release_notes.md  v0.5.0_graphical_smoke.md  v0.5.0_release_notes.md  validation.md  visual_style.md
membrane_vqc/: __init__.py  chemistry.py  commands.py  comparison_gui_worker.py  comparison_pymol.py  comparison_report.py  comparison_worker.py  constants.py  context.py  context_models.py  errors.py  exposure.py  freesasa_backend.py  gui.py  hydropathy.py  membrane.py  neighbors.py  opm_adapter.py  orientation.py  orientation_comparison.py  orientation_io.py  orientation_sources.py  pdbtm_adapter.py  pdbtm_cache.py  pdbtm_cache_contract.py  pdbtm_errors.py  pdbtm_gui_worker.py  pdbtm_provider.py  pdbtm_pymol.py  pdbtm_report_provenance.py  pdbtm_retrieval.py  pdbtm_transport.py  pdbtm_worker.py  pymol_adapter.py  qc.py  report.py  spatial.py
reports/: 1c3w_context_mvqc.json  1c3w_exposure_mvqc.csv  1c3w_exposure_mvqc.json  1c3w_mvqc.json  1pcr_context_mvqc.json  1pcr_exposure_mvqc.csv  1pcr_exposure_mvqc.json  1pcr_mvqc.json  1ubq_context_mvqc.json  1ubq_exposure_mvqc.csv  1ubq_exposure_mvqc.json  1ubq_mvqc.json  1ubq_rotated_mvqc.json  2rh1_context_mvqc.csv  2rh1_context_mvqc.json  2rh1_exposure_mvqc.json  2rh1_mvqc.json  bad_core_lys_context_mvqc.json  bad_core_lys_exposure_mvqc.csv  bad_core_lys_exposure_mvqc.json  bad_core_lys_mvqc.json  context_timing.json  exposure_timing.json  local_context_mvqc.csv  local_context_mvqc.json  manual_stage2_check.csv  manual_stage2_check.json  pdbtm_acquisition_synthetic_mvqc.json  pdbtm_acquisition_v050_mvqc.json  pdbtm_local_v050_mvqc.json  release_validation.json  (+4 more)
(+94 files in other folders)
